--- a/user/configs/config.yaml
+++ b/user/configs/config.yaml
@@ -13,7 +13,7 @@ services:
 data:
   databases:
     databases:
-      default:
+      user:
         debug: false
         driver: mysql
         source: root:rZakvdyjAmz73J8p@tcp(127.0.0.1:3309)/user?parseTime=true
