--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,6 +10,16 @@ services:
       grpc:
         addr: 0.0.0.0:8501
         timeout: 200s
+    saas:
+      http:
+        addr: 0.0.0.0:8520
+        timeout: 200s
+        cors:
+          allowed_origins: ["*"]
+          allowed_methods: ["GET", "POST", "PUT", "HEAD", "OPTIONS","DELETE","PATCH"]
+      grpc:
+        addr: 0.0.0.0:8521
+        timeout: 200s
 data:
   databases:
     databases:
@@ -17,10 +27,15 @@ data:
         debug: false
         driver: mysql
         source: root:rZakvdyjAmz73J8p@tcp(127.0.0.1:3309)/user?parseTime=true
+      saas:
+        driver: mysql
+        source: root:rZakvdyjAmz73J8p@tcp(127.0.0.1:3309)/saas?parseTime=true
+
   redis:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
+
   admin:
     username: admin
     password: zfe9R23Crbi7DybS
