--- a/saas/Makefile
+++ b/saas/Makefile
@@ -20,7 +20,7 @@ init:
 .PHONY: generate
 # generate
 generate:
-	go install github.com/google/wire/cmd/wire@v0.5.0
+	go get -d github.com/google/wire/cmd/wire@v0.5.0
 	go generate ./...
 
 .PHONY: config
