--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -26,8 +26,10 @@ services:
   clients:
     user:
       client_id: user-golang
+      timeout: 200s
     saas:
       client_id: saas-golang
+      timeout: 200s
 
 data:
   endpoints:
