--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - MYSQL_ROOT_HOST=%
     volumes:
       - mysql_data:/var/lib/mysql
+    ports:
+      - "3406:3306"
 
 volumes:
   mysql_data:
