--- a/nginx.conf
+++ b/nginx.conf
@@ -12,9 +12,9 @@ http {
             # fallbck to user
             proxy_pass http://user:8500;
         }
-        location / {
+        location /swagger {
             # swagger docs
-            proxy_pass http://api_docs:8080;
+            proxy_pass http://api_docs:8080/;
         }
     }
 
