--- a/quickstart/nginx.conf
+++ b/quickstart/nginx.conf
@@ -14,7 +14,7 @@ http {
         }
         location /swagger {
             # swagger docs
-            proxy_pass http://api_docs:8080/;
+            proxy_pass http://api_docs:8080;
         }
     }
 
