--- a/quickstart/nginx.conf
+++ b/quickstart/nginx.conf
@@ -4,17 +4,25 @@ events {
 http {
     server {
         listen 8600;
-        location /v1/saas {
+        location /v1/saas  {
             # saas
             proxy_pass http://saas:8520;
+        }
+        location /assets/saas  {
+            # saas
+            proxy_pass http://saas:8520;
+        }
+        location /swagger {
+            # swagger docs
+            proxy_pass http://api_docs:8080;
         }
         location /v1 {
             # fallbck to user
             proxy_pass http://user:8500;
         }
-        location /swagger {
-            # swagger docs
-            proxy_pass http://api_docs:8080;
+        location /assets/user  {
+            # saas
+              proxy_pass http://user:8500;
         }
     }
 
