--- a/saas/buf.gen.yaml
+++ b/saas/buf.gen.yaml
@@ -18,7 +18,7 @@ plugins:
     out: ../
     opt:
       - paths=source_relative
-  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.6.0-1
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2
     out: ../openapi
     opt:
       - allow_merge=true
