--- a/user/Makefile
+++ b/user/Makefile
@@ -2,7 +2,7 @@ GOPATH:=$(shell go env GOPATH)
 VERSION=$(shell git describe --tags --always)
 INTERNAL_PROTO_FILES=$(shell find private -name *.proto)
 API_PROTO_FILES=$(shell find ../proto/user/api -name *.proto)
-BUF_VERSION=v1.0.0-rc10
+BUF_VERSION=v1.0.0
 
 .PHONY: init
 # init env
