--- a/sys/Makefile
+++ b/sys/Makefile
@@ -1,20 +1,35 @@
 GOPATH:=$(shell go env GOPATH)
 VERSION=$(shell git describe --tags --always)
-INTERNAL_PROTO_FILES=$(shell find private -name *.proto)
+API_PROTO_FILES=$(shell find api -name *.proto)
 BUF_VERSION=v1.0.0
 
 .PHONY: init
 # init env
 init:
-	go install github.com/go-kratos/kratos/cmd/kratos/v2@latest
 	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+	go install github.com/go-kratos/kratos/cmd/kratos/v2@latest
 	go install github.com/go-kratos/kratos/cmd/protoc-gen-go-http/v2@latest
 	go install github.com/go-kratos/kratos/cmd/protoc-gen-go-errors/v2@latest
-	go install github.com/envoyproxy/protoc-gen-validate@v0.6.2
 	go install github.com/bufbuild/buf/cmd/buf@$(BUF_VERSION)
 	go install github.com/bufbuild/buf/cmd/protoc-gen-buf-breaking@$(BUF_VERSION)
 	go install github.com/bufbuild/buf/cmd/protoc-gen-buf-lint@$(BUF_VERSION)
+
+
+.PHONY: config
+# generate internal proto
+config:
+	 buf generate . --path ../proto --path ./private/conf --template buf.config.gen.yaml
+
+.PHONY: api
+# generate api proto
+api:
+	buf generate ../proto --path ../proto/sys
+
+.PHONY: build
+# build
+build:
+	mkdir -p bin/ && go build -ldflags "-X main.Version=$(VERSION)" -o ./bin/ ./...
 
 .PHONY: generate
 # generate
@@ -22,30 +37,12 @@ generate:
 	go get -d github.com/google/wire/cmd/wire@v0.5.0
 	go generate ./...
 
-.PHONY: config
-# generate internal proto
-config:
-	protoc --proto_path=. \
-	       --proto_path=../proto \
- 	       --go_out=paths=source_relative:. \
-	       $(INTERNAL_PROTO_FILES)
-
-.PHONY: api
-# generate api proto
-api:
-	buf generate ../proto --path ../proto/user
-
-.PHONY: build
-# build
-build:
-	mkdir -p bin/ && go build -ldflags "-X main.Version=$(VERSION)" -o ./bin/ ./...
-
 .PHONY: all
 # generate all
 all:
-	make generate
 	make api;
 	make config;
+	make generate;
 
 # show help
 help:
