--- a/sys/private/biz/seed/menu.yaml
+++ b/sys/private/biz/seed/menu.yaml
@@ -1,31 +1,59 @@
 menus:
   - name: "saas"
+    path: "/saas"
     component: "LAYOUT"
-    meta:
-      title: "routes.saas.title"
+    redirect: "/saas/tenants"
+    title: "routes.saas.title"
     icon: "ion:grid-outline"
+    meta:
     priority: 101
+    requirement:
+      - namespace: "saas.tenant"
+        resource: "*"
+        action: "list"
     children:
       - name: "tenant"
-        component: "/saas/tenant/index.vue"
+        path: "/tenants"
+        component: "/saas/tenant/index"
         meta:
-          title: "routes.saas.tenant.management"
+        title: "routes.saas.tenant.management"
+        requirement:
+          - namespace: "saas.tenant"
+            resource: "*"
+            action: "list"
   - name: "system"
+    path: "/system"
     component: "LAYOUT"
-    meta:
-      title: "routes.system.title"
+    redirect: '/system/users'
+    title: "routes.system.title"
     icon: "ion:grid-outline"
     priority: 101
+    meta:
     children:
       - name: "user"
-        component: "/system/user/index.vue"
+        path: 'users'
+        component: "/system/user/index"
         meta:
-          title: "routes.system.user.management"
+        title: "routes.system.user.management"
+        requirement:
+          - namespace: "user.user"
+            resource: "*"
+            action: "list"
       - name: "role"
-        component: "/system/role/index.vue"
+        path: "roles"
+        component: "/system/role/index"
         meta:
-          title: "routes.system.role.management"
+        title: "routes.system.role.management"
+        requirement:
+          - namespace: "user.role"
+            resource: "*"
+            action: "list"
       - name: "permission"
-        component: "/system/role/indexpermission.vue"
+        path: "permission"
+        component: "/system/role/permission/index"
         meta:
-          title: "routes.system.permission.management"
+        title: "routes.system.permission.management"
+        requirement:
+          - namespace: "permission"
+            resource: "*"
+            action: "list"
