feat: integration sys docker and gateway

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,3 +15,8 @@ services:
     build:
       context: .
       dockerfile: ./saas/Dockerfile
+
+  sys:
+    build:
+      context: .
+      dockerfile: ./sys/Dockerfile
