--- a/quickstart/nginx.conf
+++ b/quickstart/nginx.conf
@@ -8,6 +8,9 @@ http {
             # saas
             proxy_pass http://saas:8520;
         }
+        location /v1/sys  {
+            proxy_pass http://sys:8530;
+        }
         location /assets/saas  {
             # saas
             proxy_pass http://saas:8520;
@@ -33,6 +36,9 @@ http {
         }
         location /saas. {
             grpc_pass grpc://saas:8521;
+        }
+        location /sys. {
+            grpc_pass grpc://sys:8531;
         }
     }
 }
