--- a/sys/Dockerfile
+++ b/sys/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.16 AS builder
+FROM golang:1.17 AS builder
 
 COPY . /src
 WORKDIR /src
 
-RUN GOPROXY=https://goproxy.cn make build
+RUN GOPROXY=https://goproxy.cn make -f ./sys/Makefile build
 
 FROM debian:stable-slim
 
@@ -17,8 +17,6 @@ COPY --from=builder /src/bin /app
 
 WORKDIR /app
 
-EXPOSE 8000
-EXPOSE 9000
 VOLUME /data/conf
 
 CMD ["./sys", "-conf", "/data/conf"]
