feat: use apisix. remove nginx. fix saas middleware behind gateway

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,11 @@
 version: '3.7'
 services:
 
+  apisix:
+    build:
+      context: .
+      dockerfile: ./gateway/apisix/Dockerfile
+
   api_docs:
     build:
       context: .
