--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 version: '3.7'
 services:
 
-  nginx:
-    image: nginx:alpine
+  apisix:
+    image: ${DOCKER_REGISTRY}go-saas-kit-apisix:${DOCKER_TAG:-latest}
+    restart: always
     volumes:
-     - ./quickstart/nginx.conf:/etc/nginx/nginx.conf
+      - ./quickstart/configs/apisix/apisix_conf/config.yaml:/usr/local/apisix/conf/config.yaml:ro
+      - ./quickstart/configs/apisix/apisix_conf/apisix.yaml:/usr/local/apisix/conf/apisix.yaml:ro
+      - ./quickstart/configs:/usr/local/apisix/kit/conf
+    #    depends_on:
+    #      - etcd
     ports:
-     - "8600:8600"
-    depends_on:
-      - user
-      - saas
-      - sys
-      - api_docs
+      - "9080:9080/tcp"
+      - "9091:9091/tcp"
+      - "9443:9443/tcp"
+      - "9092/tcp"
 
   api_docs:
     image: ${DOCKER_REGISTRY}go-saas-kit-swagger:${DOCKER_TAG:-latest}
