--- a/quickstart/configs/apisix/apisix_conf/config.yaml
+++ b/quickstart/configs/apisix/apisix_conf/config.yaml
@@ -19,8 +19,8 @@ apisix:
   node_listen: 9080              # APISIX listening port
   enable_ipv6: false
 
-#  enable_admin: false #https://apisix.apache.org/docs/apisix/stand-alone/
-#  config_center: yaml
+  enable_admin: false #https://apisix.apache.org/docs/apisix/stand-alone/
+  config_center: yaml
 
   allow_admin:                  # http://nginx.org/en/docs/http/ngx_http_access_module.html#allow
     - 0.0.0.0/0              # We need to restrict ip access rules for security. 0.0.0.0/0 is for test.
@@ -42,11 +42,11 @@ apisix:
 ext-plugin:
   cmd: ["/app/go-runner", "run","-c ./kit/conf"]
 
-etcd:
-  host:                           # it's possible to define multiple etcd hosts addresses of the same etcd cluster.
-    - "http://etcd:2379"     # multiple etcd address
-  prefix: "/apisix"               # apisix configurations prefix
-  timeout: 30                     # 30 seconds
+#etcd:
+#  host:                           # it's possible to define multiple etcd hosts addresses of the same etcd cluster.
+#    - "http://etcd:2379"     # multiple etcd address
+#  prefix: "/apisix"               # apisix configurations prefix
+#  timeout: 30                     # 30 seconds
 
 plugin_attr:
   prometheus:
