feat: upgrade to go 1.18rc1

--- a/saas/Makefile
+++ b/saas/Makefile
@@ -39,7 +39,7 @@ api:
 .PHONY: build
 # build
 build:
-	mkdir -p bin/ && go build -ldflags "-X main.Version=$(VERSION)" -o ./bin/ ./...
+	mkdir -p bin/ && go build -buildvcs=false -ldflags "-X main.Version=$(VERSION)" -o ./bin/ ./...
 
 .PHONY: all
 # generate all
