--- a/user/Makefile
+++ b/user/Makefile
@@ -38,7 +38,7 @@ api:
 .PHONY: build
 # build
 build:
-	mkdir -p bin/ && go build -ldflags "-X main.Version=$(VERSION)" -o ./bin/ ./...
+	mkdir -p bin/ && go build -buildvcs=false -buildvcs=false -ldflags "-X main.Version=$(VERSION)" -o ./bin/ ./...
 
 .PHONY: all
 # generate all
