--- a/quickstart/configs/apisix/apisix_conf/apisix.yaml
+++ b/quickstart/configs/apisix/apisix_conf/apisix.yaml
@@ -10,6 +10,9 @@ routes:
     uri: /swagger*
     upstream_id: api-docs
 
+  -
+    uri: /jaeger*
+    upstream_id: jaeger
 
   -
     uri: /v1/sys/*
@@ -84,6 +87,12 @@ upstreams:
     nodes:
       "web:80": 1
     type: roundrobin
+
+  - id: jaeger
+    nodes:
+      "jaeger-all-in-one:16686": 1
+    type: roundrobin
+
 
 global_rules:
   -
