--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -85,7 +85,7 @@ security:
     expire_in: 2592000s #    30 days
     secret: 6efa4458-b245-40a3-9685-6b30d5dcda49
   security_cookie:
-    hash: gt35ofggk07kdt7ief99bl51avd7pbhe
+    hash_key: gt35ofggk07kdt7ief99bl51avd7pbhe
   oidc:
     hydra:
       admin_url: http://hydra:4445
