--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,8 @@ services:
   web:
     build:
       context: ./web
-  apisix:
+
+  apisix-plugin:
     build:
       context: .
       dockerfile: ./gateway/apisix/Dockerfile
