--- a/gateway/apisix/Dockerfile
+++ b/gateway/apisix/Dockerfile
@@ -6,6 +6,18 @@ WORKDIR /src/gateway/apisix
 RUN GOPROXY=https://goproxy.cn make -f ./Makefile build
 
 
-FROM apache/apisix:2.13.0-centos
+FROM debian:stable-slim
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+		ca-certificates  \
+        netbase \
+        && rm -rf /var/lib/apt/lists/ \
+        && apt-get autoremove -y && apt-get autoclean -y
 
 COPY --from=builder /src/gateway/apisix/bin /app
+
+WORKDIR /app
+
+VOLUME /data/conf
+
+CMD ["./go-runner","run", "-c", "/data/conf"]
