--- a/quickstart/configs/apisix/apisix_conf/config.yaml
+++ b/quickstart/configs/apisix/apisix_conf/config.yaml
@@ -40,7 +40,7 @@ apisix:
     port: 9092
 
 ext-plugin:
-  cmd: ["/app/go-runner", "run","-c ./kit/conf"]
+  path_for_test: /tmp/runner/runner.sock
 
 #etcd:
 #  host:                           # it's possible to define multiple etcd hosts addresses of the same etcd cluster.
