feat: dynamic permission def

--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -90,6 +90,26 @@ user:
   admin:
     username: admin
     password: youShouldChangeThis@123
+  permission:
+    groups:
+      - name: "permission.cms.post"
+        def:
+          - name: "permission.cms.post.any"
+            namespace: "cms.post"
+            action: "*"
+            internal: true
+          - name: "permission.cms.post.read"
+            namespace: "cms.post"
+            action: "read"
+          - name: "permission.cms.post.create"
+            namespace: "cms.post"
+            action: "create"
+          - name: "permission.cms.post.update"
+            namespace: "cms.post"
+            action: "update"
+          - name: "permission.cms.post.delete"
+            namespace: "cms.post"
+            action: "delete"
 
 saas:
   database:
