--- a/web/docker/nginx/nginx.conf
+++ b/web/docker/nginx/nginx.conf
@@ -1,12 +1,11 @@
 server {
-    server_name         sunny_frontend;
+    listen       8080;
+    server_name         _;
+
     location / {
-        root            /usr/share/nginx/html;
-        index           index.html;
-        try_files       $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
     error_page          500 502 503 504  /50x.html;
-    location = /50x.html {
-        root            /usr/share/nginx/html;
-    }
 }
