--- a/gateway/apisix/Dockerfile
+++ b/gateway/apisix/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:1.18 AS builder
 COPY . /src
 WORKDIR /src/gateway/apisix
 
-RUN GOPROXY=https://goproxy.cn make -f ./Makefile build
+RUN make -f ./Makefile build
 
 
 FROM debian:stable-slim
