--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker image
+      - name: Build the docker image
         run: docker-compose -f docker-compose.yml -f docker-compose.dev.yml build
 
-      - if: |
+      - name: Docker login
+        if: |
           github.event_name == 'push'
           && github.repository == 'Goxiaoy/go-saas-kit'
         uses: docker/login-action@v1
@@ -29,8 +30,37 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - if: |
+      - name: Push docker image
+        if: |
           github.event_name == 'push'
           && github.repository == 'Goxiaoy/go-saas-kit'
         run: docker-compose -f docker-compose.yml -f docker-compose.dev.yml push
 
+      - name: Publish to demo server
+        if: |
+          github.event_name == 'push'
+          && github.repository == 'Goxiaoy/go-saas-kit'
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          source: "quickstart/,.env,docker-compose.yml,docker-compose.tracing.yml,docker-compose.hydra.yml"
+          target: "/app/go-saas-kit"
+      - name: Update demo server
+        if: |
+          github.event_name == 'push'
+          && github.repository == 'Goxiaoy/go-saas-kit'
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd /app/go-saas-kit
+            docker-compose
+     
+
+          
