--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,8 @@ on:
       - 'main'
   workflow_dispatch:
 
+env:
+  DOCKER_TAG: dev
 
 jobs:
 
@@ -24,8 +26,6 @@ jobs:
           github.event_name == 'push'
           && github.repository == 'Goxiaoy/go-saas-kit'
         uses: docker/login-action@v1
-        env:
-          DOCKER_TAG: dev
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -34,6 +34,7 @@ jobs:
         if: |
           github.event_name == 'push'
           && github.repository == 'Goxiaoy/go-saas-kit'
+
         run: docker-compose -f docker-compose.yml -f docker-compose.dev.yml push
 
       - name: Publish to demo server
@@ -58,9 +59,12 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
+          envs: DOCKER_TAG
           script: |
+            
             cd /app/go-saas-kit
-            docker-compose
+            docker-compose -f docker-compose.yml -f docker-compose.tracing.yml pull
+            docker-compose -f docker-compose.yml -f docker-compose.tracing.yml up -d
      
 
           
