--- a/docker-compose.tracing.yml
+++ b/docker-compose.tracing.yml
@@ -12,7 +12,7 @@ services:
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib-dev:latest
-    command: ["--config=/etc/otel-collector-config.yaml", "${OTELCOL_ARGS}"]
+    command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
       - ./quickstart/configs/otel/otel-collector-config.yaml:/etc/otel-collector-config.yaml
 
