--- a/web/tsconfig.shared.json
+++ b/web/tsconfig.shared.json
@@ -12,7 +12,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "experimentalDecorators": true,
     "lib": [
