--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
     volumes:
       - ./quickstart/configs:/data/conf
       - ./quickstart/.assets:/app/.assets
+    command: ["./sys", "-conf", "/data/conf","-seed","/data/conf/seed/sys.yaml"]
 
   mysqld:
     image: mysql:5.7
