--- a/sys/api/permission.yaml
+++ b/sys/api/permission.yaml
@@ -7,23 +7,18 @@ groups:
         namespace: "sys.menu"
         action: "*"
         internal: true
-        side: HOST_ONLY
       - name: "permission.sys.menu.read"
         namespace: "sys.menu"
         action: "read"
-        side: HOST_ONLY
       - name: "permission.sys.menu.create"
         namespace: "sys.menu"
         action: "create"
-        side: HOST_ONLY
       - name: "permission.sys.menu.update"
         namespace: "sys.menu"
         action: "update"
-        side: HOST_ONLY
       - name: "permission.sys.menu.delete"
         namespace: "sys.menu"
         action: "delete"
-        side: HOST_ONLY
 
   - name: "permission.dev"
     side: HOST_ONLY
@@ -32,8 +27,9 @@ groups:
         namespace: "dev"
         action: "*"
         internal: true
-        side: HOST_ONLY
       - name: "permission.dev.jaeger"
         namespace: "dev.jaeger"
         action: "*"
-        side: HOST_ONLY
+      - name: "permission.dev.docs"
+        namespace: "dev.docs"
+        action: "*"
